Add live demo and production-ready configuration
- Add live demo section to README with InfinityFree link
- Update config.php with environment auto-detection
- Add placeholder values for production credentials
- Update .gitignore to protect sensitive config files
- Fix database.sql for hosting compatibility
- Security: All production credentials kept local only

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ uploads/profiles/*
 
 # ===== Configuration Files =====
 config/config.php.local
+config/config.production.php
+config/config.local.php
+config/README.md
 *.local.php
+*.production.php
 
 # ===== Sensitive Data =====
 .env
