Add demo images and finalize configuration
- Add webp demo images for all sample posts (optimized file sizes)
- Update SQL with featured_image fields for visual demo
- Fix README
- Update .gitignore to allow demo images while protecting real uploads
- Prepare for production deployment with complete demo data

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ uploads/posts/*
 uploads/profiles/*
 !uploads/posts/.gitkeep
 !uploads/profiles/.gitkeep
+!uploads/posts/*-demo.*
 
 # ===== Configuration Files =====
 config/config.php.local
